# kb-mcp-server

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hwp_rag_mcp/: __init__.py  __main__.py  active.py  cli.py  config.py  embeddings.py  index.py  installer.py  models.py  server.py
tests/: conftest.py  test_active.py  test_cli.py  test_config.py  test_embeddings.py  test_index.py  test_installer.py  test_mcp_stdio.py  test_real_documents.py
